--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["daisyui", "MOBA", "singleplayer", "synthwave"]
+  "cSpell.words": ["daisyui", "IGDB", "MOBA", "singleplayer", "synthwave"]
 }
