might be under incorrect profile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["daisyui", "IGDB", "MOBA", "singleplayer", "synthwave"]
+  "cSpell.words": [
+    "daisyui",
+    "IGDB",
+    "MOBA",
+    "singleplayer",
+    "synthwave",
+    "toastify"
+  ]
 }
