--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
+    "puppeteer": "^21.6.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^9.1.3"
